Bug fix #1 (Loop Relation - Begin Transaction)

--- a/restaurant_v1/WebContent/WEB-INF/web.xml
+++ b/restaurant_v1/WebContent/WEB-INF/web.xml
@@ -11,13 +11,401 @@
   </welcome-file-list>
   
   
+ 
+  
   <servlet>
-	    <servlet-name>AllLocals</servlet-name>
-	    <servlet-class>servlet.AllLocals</servlet-class>
-	</servlet>
-
+    <servlet-name>ProductsByType</servlet-name>
+    <servlet-class>servlet.ProductsByType</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>IngredientsOfProduct</servlet-name>
+    <servlet-class>servlet.IngredientsOfProduct</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>Login</servlet-name>
+    <servlet-class>servlet.Login</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>isLogged</servlet-name>
+    <servlet-class>servlet.isLogged</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>Logout</servlet-name>
+    <servlet-class>servlet.Logout</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>addToCart</servlet-name>
+    <servlet-class>servlet.addToCart</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>IncreaseQuantityProduct</servlet-name>
+    <servlet-class>servlet.IncreaseQuantityProduct</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>DecreaseQuantityProduct</servlet-name>
+    <servlet-class>servlet.DecreaseQuantityProduct</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>GetCart</servlet-name>
+    <servlet-class>servlet.GetCart</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>SaveOrder</servlet-name>
+    <servlet-class>servlet.SaveOrder</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>OrdersByUser</servlet-name>
+    <servlet-class>servlet.OrdersByUser</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AllProducts</servlet-name>
+    <servlet-class>servlet.AllProducts</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>tokenSignin</servlet-name>
+    <servlet-class>servlet.tokenSignin</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>SendMail</servlet-name>
+    <servlet-class>servlet.SendMail</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>SaveUser</servlet-name>
+    <servlet-class>servlet.SaveUser</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>ConfermaUtente</servlet-name>
+    <servlet-class>servlet.ConfermaUtente</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>UpdateLoggedUser</servlet-name>
+    <servlet-class>servlet.UpdateLoggedUser</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>SaveNewsletter</servlet-name>
+    <servlet-class>servlet.SaveNewsletter</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AllLocals</servlet-name>
+    <servlet-class>servlet.AllLocals</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AddLocalSession</servlet-name>
+    <servlet-class>servlet.AddLocalSession</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>LocalInfo</servlet-name>
+    <servlet-class>servlet.LocalInfo</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AllUsers</servlet-name>
+    <servlet-class>servlet.AllUsers</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>isRestaurantChosen</servlet-name>
+    <servlet-class>servlet.isRestaurantChosen</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>OrdersById</servlet-name>
+    <servlet-class>servlet.OrdersById</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>UserById</servlet-name>
+    <servlet-class>servlet.UserById</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AllOrders</servlet-name>
+    <servlet-class>servlet.AllOrders</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>OrdersByProduct</servlet-name>
+    <servlet-class>servlet.OrdersByProduct</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>SaveAnalytic</servlet-name>
+    <servlet-class>servlet.SaveAnalytic</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AllAnalytic</servlet-name>
+    <servlet-class>servlet.AllAnalytic</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AllLogs</servlet-name>
+    <servlet-class>servlet.AllLogs</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AllIngredients</servlet-name>
+    <servlet-class>servlet.AllIngredients</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>IngredientById</servlet-name>
+    <servlet-class>servlet.IngredientById</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AllUsersByConfirm</servlet-name>
+    <servlet-class>servlet.AllUsersByConfirm</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>LocalBySession</servlet-name>
+    <servlet-class>servlet.LocalBySession</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>OrdersByState</servlet-name>
+    <servlet-class>servlet.OrdersByState</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>UpdateOrder</servlet-name>
+    <servlet-class>servlet.UpdateOrder</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>DeleteOrder</servlet-name>
+    <servlet-class>servlet.DeleteOrder</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AllTypeOfProduct</servlet-name>
+    <servlet-class>servlet.AllTypeOfProduct</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>UpdateProduct</servlet-name>
+    <servlet-class>servlet.UpdateProduct</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>UploadFile</servlet-name>
+    <servlet-class>servlet.UploadFile</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>SaveProduct</servlet-name>
+    <servlet-class>servlet.SaveProduct</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>SaveReviewProduct</servlet-name>
+    <servlet-class>servlet.SaveReviewProduct</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>SaveReviewLocal</servlet-name>
+    <servlet-class>servlet.SaveReviewLocal</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>ReviewLocalByLocalUser</servlet-name>
+    <servlet-class>servlet.ReviewLocalByLocalUser</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>CreateLocal</servlet-name>
+    <servlet-class>servlet.CreateLocal</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>UpdateLocal</servlet-name>
+    <servlet-class>servlet.UpdateLocal</servlet-class>
+  </servlet>
+   <servlet>
+  <servlet-name>UpdateUser</servlet-name>
+  <servlet-class>servlet.UpdateUser</servlet-class>
+ </servlet>
+  <servlet>
+  <servlet-name>UpdateIngrediente</servlet-name>
+  <servlet-class>servlet.UpdateIngrediente</servlet-class>
+ </servlet>
+ <servlet>
+  <servlet-name>SaveIngrediente</servlet-name>
+  <servlet-class>servlet.SaveIngrediente</servlet-class>
+ </servlet>
+ 
+ 
+  <servlet-mapping>
+    <servlet-name>ProductsByType</servlet-name>
+    <url-pattern>/servlet/ProductsByType</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>IngredientsOfProduct</servlet-name>
+    <url-pattern>/servlet/IngredientsOfProduct</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Login</servlet-name>
+    <url-pattern>/servlet/Login</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>isLogged</servlet-name>
+    <url-pattern>/servlet/isLogged</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Logout</servlet-name>
+    <url-pattern>/servlet/Logout</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>addToCart</servlet-name>
+    <url-pattern>/servlet/addToCart</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>IncreaseQuantityProduct</servlet-name>
+    <url-pattern>/servlet/IncreaseQuantityProduct</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>DecreaseQuantityProduct</servlet-name>
+    <url-pattern>/servlet/DecreaseQuantityProduct</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GetCart</servlet-name>
+    <url-pattern>/servlet/GetCart</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SaveOrder</servlet-name>
+    <url-pattern>/servlet/SaveOrder</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>OrdersByUser</servlet-name>
+    <url-pattern>/servlet/OrdersByUser</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AllProducts</servlet-name>
+    <url-pattern>/servlet/AllProducts</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>tokenSignin</servlet-name>
+    <url-pattern>/servlet/tokenSignin</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SendMail</servlet-name>
+    <url-pattern>/servlet/SendMail</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SaveUser</servlet-name>
+    <url-pattern>/servlet/SaveUser</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ConfermaUtente</servlet-name>
+    <url-pattern>/servlet/ConfermaUtente</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UpdateLoggedUser</servlet-name>
+    <url-pattern>/servlet/UpdateLoggedUser</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SaveNewsletter</servlet-name>
+    <url-pattern>/servlet/SaveNewsletter</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>AllLocals</servlet-name>
     <url-pattern>/servlet/AllLocals</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AddLocalSession</servlet-name>
+    <url-pattern>/servlet/AddLocalSession</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>LocalInfo</servlet-name>
+    <url-pattern>/servlet/LocalInfo</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AllUsers</servlet-name>
+    <url-pattern>/servlet/AllUsers</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>isRestaurantChosen</servlet-name>
+    <url-pattern>/servlet/isRestaurantChosen</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>OrdersById</servlet-name>
+    <url-pattern>/servlet/OrdersById</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UserById</servlet-name>
+    <url-pattern>/servlet/UserById</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AllOrders</servlet-name>
+    <url-pattern>/servlet/AllOrders</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>OrdersByProduct</servlet-name>
+    <url-pattern>/servlet/OrdersByProduct</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SaveAnalytic</servlet-name>
+    <url-pattern>/servlet/SaveAnalytic</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AllAnalytic</servlet-name>
+    <url-pattern>/servlet/AllAnalytic</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AllLogs</servlet-name>
+    <url-pattern>/servlet/AllLogs</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AllIngredients</servlet-name>
+    <url-pattern>/servlet/AllIngredients</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>IngredientById</servlet-name>
+    <url-pattern>/servlet/IngredientById</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AllUsersByConfirm</servlet-name>
+    <url-pattern>/servlet/AllUsersByConfirm</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>LocalBySession</servlet-name>
+    <url-pattern>/servlet/LocalBySession</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>OrdersByState</servlet-name>
+    <url-pattern>/servlet/OrdersByState</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UpdateOrder</servlet-name>
+    <url-pattern>/servlet/UpdateOrder</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>DeleteOrder</servlet-name>
+    <url-pattern>/servlet/DeleteOrder</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AllTypeOfProduct</servlet-name>
+    <url-pattern>/servlet/AllTypeOfProduct</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UpdateProduct</servlet-name>
+    <url-pattern>/servlet/UpdateProduct</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UploadFile</servlet-name>
+    <url-pattern>/servlet/UploadFile</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SaveProduct</servlet-name>
+    <url-pattern>/servlet/SaveProduct</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SaveReviewProduct</servlet-name>
+    <url-pattern>/servlet/SaveReviewProduct</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SaveReviewLocal</servlet-name>
+    <url-pattern>/servlet/SaveReviewLocal</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ReviewLocalByLocalUser</servlet-name>
+    <url-pattern>/servlet/ReviewLocalByLocalUser</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CreateLocal</servlet-name>
+    <url-pattern>/servlet/CreateLocal</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UpdateLocal</servlet-name>
+    <url-pattern>/servlet/UpdateLocal</url-pattern>
+  </servlet-mapping>
+   <servlet-mapping>
+  <servlet-name>UpdateUser</servlet-name>
+  <url-pattern>/servlet/UpdateUser</url-pattern>
+ </servlet-mapping>
+   <servlet-mapping>
+  <servlet-name>UpdateIngrediente</servlet-name>
+  <url-pattern>/servlet/UpdateIngrediente</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>SaveIngrediente</servlet-name>
+  <url-pattern>/servlet/SaveIngrediente</url-pattern>
+ </servlet-mapping>
+ 
 </web-app>
